--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
 
         <h1>Patid Golf Club</h1>
-        <form action="registerPlayer" method="get">
+        <form class="registerPlayer" method="get">
 
             <input type="text" name="name" id="name" placeholder="NAME">
             <button type="submit">Register</button>
