--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
 
-        <h1>Patid Golf Club</h1>
+        <h1>Golf Club</h1>
         <form class="registerPlayer" method="get">
 
             <input type="text" name="name" id="name" placeholder="NAME">
