--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
         <div class="playerSB">
 
             <button id="startSBbtn">Start</button>
-
+            <div class="gameOn"></div>
         </div>
 
+
+
+
         <div class="result">
+
             <button id="resultbtn">Result</button>
+
         </div>
 
         <div class="c">
